--- a/public/index.html
+++ b/public/index.html
@@ -1354,7 +1354,7 @@ Naresh Chandanbatve
     <div class="card h-100">
     <div class="card-header p-0">
     <a href="https://nareshblogs.hashnode.dev/optimizing-docker-image-size-in-mern-apps-using-multistage-dockerfile">
-    <img src="./images/projects/arrow.png" class="card-img-top" alt="Boost Performance: Optimizing Docker Image Size in MERN Apps using Multistage Dockerfile">
+    <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1691796741211/1ac1f2ad-f299-4df9-aad9-c8a334c69cb4.webp?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" class="card-img-top" alt="Boost Performance: Optimizing Docker Image Size in MERN Apps using Multistage Dockerfile">
     </a>
     </div>
     <div class="card-body bg-transparent p-4 shadow-sm">
@@ -1370,7 +1370,7 @@ Naresh Chandanbatve
     </div>
     </div>
     <div class="mt-auto post-footer bg-transparent p-3">
-    <span class="float-start bg-transparent">Dec 9, 2022</span>
+    <span class="float-start bg-transparent">Sep 5, 2023</span>
     <a href="https://nareshblogs.hashnode.dev/optimizing-docker-image-size-in-mern-apps-using-multistage-dockerfile" class="float-end btn btn-outline-info btn-sm">Read</a>
     </div>
     </div>
@@ -1381,7 +1381,7 @@ Naresh Chandanbatve
     <div class="card h-100">
     <div class="card-header p-0">
     <a href="https://nareshblogs.hashnode.dev/how-to-containerize-the-mern-stack-application-using-docker">
-    <img src="./images/projects/arrow.png" class="card-img-top" alt="How to containerize the MERN stack application using Docker">
+    <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1688163561265/6a8d9777-b25b-48c8-890e-cf69b58a3917.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" class="card-img-top" alt="How to containerize the MERN stack application using Docker">
     </a>
     </div>
     <div class="card-body bg-transparent p-4 shadow-sm">
@@ -1396,7 +1396,7 @@ Naresh Chandanbatve
     </div>
     </div>
     <div class="mt-auto post-footer bg-transparent p-3">
-    <span class="float-start bg-transparent">Apr 3, 2021</span>
+    <span class="float-start bg-transparent">Jul 1, 2023</span>
     <a href="https://nareshblogs.hashnode.dev/how-to-containerize-the-mern-stack-application-using-docker" class="float-end btn btn-outline-info btn-sm">Read</a>
     </div>
     </div>
@@ -1404,10 +1404,10 @@ Naresh Chandanbatve
     </div>
     <div class="col-lg-4 col-md-6 my-3">
     <div class="card-columns">
-    <div class="card h-100">
+    <div class="card h-100">~
     <div class="card-header p-0">
     <a href="https://nareshblogs.hashnode.dev/deploy-a-mern-stack-application-on-kubernetes-using-minikube">
-    <img src="./images/projects/arrow.png" class="card-img-top" alt="Deploy a MERN stack Application on Kubernetes using Minikube">
+    <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1695500119954/4b063110-bba1-468c-af22-f53c0c623f47.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" class="card-img-top" alt="Deploy a MERN stack Application on Kubernetes using Minikube">
     </a>
     </div>
     <div class="card-body bg-transparent p-4 shadow-sm">
@@ -1423,7 +1423,8 @@ Naresh Chandanbatve
     </div>
     </div>
     <div class="mt-auto post-footer bg-transparent p-3">
-    <span class="float-start bg-transparent">Apr 3, 2021</span>
+    <span class="float-start bg-transparent">Sep 24, 2023
+    </span>
     <a href="https://nareshblogs.hashnode.dev/deploy-a-mern-stack-application-on-kubernetes-using-minikube" class="float-end btn btn-outline-info btn-sm">Read</a>
     </div>
     </div>
@@ -1706,6 +1707,7 @@ Naresh Chandanbatve
 
 
     <script src="./js/search.js"></script>
+    <script src="./js/updateblogs.js"></script>
 
 
 
