--- a/public/index.html
+++ b/public/index.html
@@ -1404,7 +1404,7 @@ Naresh Chandanbatve
     </div>
     <div class="col-lg-4 col-md-6 my-3">
     <div class="card-columns">
-    <div class="card h-100">~
+    <div class="card h-100">
     <div class="card-header p-0">
     <a href="https://nareshblogs.hashnode.dev/deploy-a-mern-stack-application-on-kubernetes-using-minikube">
     <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1695500119954/4b063110-bba1-468c-af22-f53c0c623f47.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" class="card-img-top" alt="Deploy a MERN stack Application on Kubernetes using Minikube">
